app-code/filebrowser/filebrowser.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: filebrowser
  namespace: media
  labels:
    app: filebrowser
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: filebrowser
  template:
    metadata:
      labels:
        app: filebrowser
    spec:
      nodeSelector:
        kubernetes.io/hostname: atlantis

      containers:
        - name: filebrowser
          image: filebrowser/filebrowser:latest
          imagePullPolicy: Always
          securityContext:
            runAsUser: 0   # God Mode: Runs as root to allow moving files between drives
            runAsGroup: 0
          ports:
            - containerPort: 80
              name: http
          volumeMounts:
            - name: config
              mountPath: /database
            # God Mode Mount: Mounts all of Atlantis's storage arrays
            - name: root-mnt
              mountPath: /srv
      volumes:
        - name: config
          persistentVolumeClaim:
            claimName: filebrowser-config-pvc
        - name: root-mnt
          hostPath:
            path: /mnt
            type: Directory
---
apiVersion: v1
kind: Service
metadata:
  name: filebrowser-svc
  namespace: media
spec:
  selector:
    app: filebrowser
  type: NodePort
  ports:
    - name: http
      port: 80
      targetPort: 80
      nodePort: 30088
