app-code/filebrowser/filebrowser-ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: filebrowser-ingress
  namespace: media
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - match: Host(`files.aura`)
      kind: Rule
      middlewares:
        - name: authentik-forwardauth
          namespace: security
      services:
        - name: filebrowser-svc
          port: 80
